# Nmap Changelog ($Id$); -*-text-*-

o Added some additional CPE entries to nmap-service-probes.
  [Dillon Graham]

o Enabled support for IPv6 traceroute using UDP, SCTP, and IPProto
  (Next Header) probes. [David Fifield]

o Fixed an assertion failure with IPv6 traceroute trying to use an
  unsupported protocol:
    nmap: traceroute.cc:749: virtual unsigned char*
    UDPProbe::build_packet(const sockaddr_storage*, u32*) const: Assertion
    `source->ss_family == 2' failed.
  This was reported by Pierre Emeriaud. [David Fifield]

o [NSE] Added oracle-brute-stealth which exploits CVE-2012-3137, a weakness
  in the Oracle O5LOGIN authentication scheme. [Dhiru Kholia]

o Scans that use OS sockets (including TCP connect scan, version
  detection, and script scan) now use the SO_BINDTODEVICE sockopt on
  Linux, so that the -e option is honored. [David Fifield]

o Upgraded the included OpenSSL to version 1.0.1c. [David Fifield]

o Moved some Windows dependencies, including OpenSSL, libsvn, and the
  vcredist files, into a new public Subversion directory
  /nmap-mswin32-aux. This reduces the size of source code
  distributions for users who don't need these files. Those who build
  on Windows will need to check out /nmap-mswin32-aux in parallel to
  their nmap checkout as described at
  http://nmap.org/book/inst-windows.html#inst-win-source.

o Changed libdnet's routing interface to return an interface name for
  each route on the most common operating systems. This is used to
  improve the quality of Nmap's matching of routes to interfaces,
  which was previously done by matching routes to interface addresses.
  [Djalal Harouni, David Fifield]

o Fixed a bug that prevented Nmap from finding any interfaces when one
  of them had the type ARPHDR_INFINIBAND; this was the case for
  IP-over-InfiniBand interfaces. However, This support is not complete
  since IPoIB interfaces use 20 bytes for the hardware address, and
  currently we only report and handle 6 bytes.